--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -159,6 +159,7 @@ h1, h2, h3, h4, h5, h6 {
     min-width:0;
     height: 28px;
     padding: 0;
+    margin-left: var(--padding-sm);
     cursor: pointer;
     
     /*transform: translateY(-50%);*/
